Add std:: prefix to nullptr_t

This CL fixes building with libstdc++ instead of libc++.

BUG=797448
R=sky

Change-Id: I631cbb68511ac76214e07806ace99539ffe49f17
Reviewed-on: https://chromium-review.googlesource.com/848154
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526583}
Former-commit-id: ef0323bdaab9e19e246b97cf1586a39f6e8f23c2